update on initial commit,timeline, list text fixed.  poster not fixed

--- a/index.html
+++ b/index.html
@@ -3,87 +3,94 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>AAA</title>
-  <link rel="shortcut icon" href="pictures/logo3.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo3.jpg" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
   <div class="main">
     <div class="text">
       <h2>THE PLUSHY FAMILY</h2>
-        <p>(AAA#ooc-010532, 66 min, 2018, Berlin)</p>
-    is an experimental eye-witness documentary, portraying people’s thoughts,
-    interactions and experiences with social media platforms and a  personalised
-    internet. The movie shows in a synchronised two camera perspective a turn based
-    un-moderated many people conversation.
-    As filter bubbles pop, fake news loom in clouds of smoke, surveillance is over
-    present, personalised data is extracted and deep machine learning exploits
-    privacy, today´s opinions loop in echo chambers. While old arguments get
-    deconstructed and a new inter subjective awareness is emerging, the audience has
-    the privilege to reflect on “what was the Now and what has the Now become”.
-    The montage technique and camera concept are an experimental approach that
-    aimed for a novel narrative form, in order to sustain a higher attention of the
-    audience to follow complex spoken arguments and chains of thought.The material
-    was recorded in winter 2017, before the disclosure of the Facebook Cambridge
-    Analytica data scandal, the EU General Data Protection Regulation (GDPR), before
-    the European Commission’s fine on Google for breaching EU antitrust rules and so
-    on and so forth. The ongoing progress in social media platforms and the surrounding
-    debate deconstruct an imprint of a past assertive claim recorded in “The Plushy
-    Family”
+      <p>(AAA#ooc-010532, 66 min, 2018, Berlin)</p>
+      <p>is an experimental eye-witness documentary, portraying people’s thoughts,
+        interactions and experiences with social media platforms and a personalised
+        internet. The movie shows in a synchronised two camera perspective a turn based
+        un-moderated many people conversation.
+        As filter bubbles pop, fake news loom in clouds of smoke, surveillance is over
+        present, personalised data is extracted and deep machine learning exploits
+        privacy, today´s opinions loop in echo chambers. While old arguments get
+        deconstructed and a new inter subjective awareness is emerging, the audience has
+        the privilege to reflect on “what was the Now and what has the Now become”.
+        The montage technique and camera concept are an experimental approach that
+        aimed for a novel narrative form, in order to sustain a higher attention of the
+        audience to follow complex spoken arguments and chains of thought.The material
+        was recorded in winter 2017, before the disclosure of the Facebook Cambridge
+        Analytica data scandal, the EU General Data Protection Regulation (GDPR), before
+        the European Commission’s fine on Google for breaching EU antitrust rules and so
+        on and so forth. The ongoing progress in social media platforms and the surrounding
+        debate deconstruct an imprint of a past assertive claim recorded in “The Plushy
+        Family”
+      </p>
     </div>
   </div>
-  <div class="break"> TIMELINE</DIV>
-    <div class="img-magnifier-container">
-  <img id="timeline" src="pictures/img2.jpg"  alt="Timeline">
-</div>
+  <div class="break"> TIMELINE</div>
 
-
-<div class="flex-container">
-<div class="poster-box"><img  class="poster" src="pictures/img3.jpg"  alt="Poster"></div>
-<div class="aaa">
-  <div>A</div>
-  <div>A</div>
-  <div>A</div>
-</div>
-</div>
-
-
-<div class="about">
-  <h2>ABOUT</h2>
-  <h4>Recorded 2017</h4>
-  <h5>experimental documentary</h5>
-  <div class="list"><p>many people discussion</p>
-  <p>umoderated</p>
-  <p>Syncronized split screen montage</p>
-  <p>eye witness</p>
-  <p>impression & thoughts about social media</p>
+  <div class="img-magnifier-container">
+    <img id="timelineimg" src="pictures/img2.jpg" alt="Time line">
   </div>
-</div>
-
-<div class="about">
-  <h3>Collective project work</h3>
-  <h4>#occ 020532</h4>
-  <p>we found together for this collective  experimental work in 2017.
-    we approached a montage form that allows stay focused on the discussion.</p>
-</div>
-
-
-<div class="movie">
-<div class="movieT"> THE MOVIE</DIV>
-  <div class="video">
-    <video controls poster="pictures/img4.jpg">
-  <source src="pictures/video.mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>
-</div>
-<div class="prot">PROTAGONISTS</div>
-<div class="group"><img class= "gpic" src="pictures/img5.jpg"></div>
-
-<div class="more">MORE</div>
-</div>
-<script src="main.js"></script>
-
-
+  <div class="flex-container">
+    <div class="poster-box"><img class="poster" src="pictures/img3.jpg" alt="Poster"></div>
+    <div class="aaa">
+      <div>A.</div>
+      <div>A.</div>
+      <div>A. </div>
+    </div>
+    <div class="number">
+      <div>#occ-020532</div>
+    </div>
+    <div class="about">
+      <h2>A B O U T</h2>
+      <h4>Recorded 2017</h4>
+      <h5>experimental documentary</h5>
+      <div class="list">
+        <p>many people discussion</p>
+        <p>unmoderated</p>
+        <p>Syncronized split screen montage</p>
+        <p>eye witness</p>
+        <p>opinions & thoughts about social media in 2017 </p>
+      </div>
+      <h3>Collective project work</h3>
+      <p>A group of three people teamed up for this film in 2017.
+        The film was shot in Berlin in two sessions each with up to 6 participants.
+        The film was shot and edited and finalized collectively.
+        We approached a montage form that allows stay focused on the audible part
+        of the discussion. The viewer newer gets to see the speaking person, instead,
+        the camera perspective is focused on the other participants.
+      </p>
+    </div>
+  </div>
+  <div class="movie">
+    <div class="movieT"> THE MOVIE</div>
+    <div class="video">
+      <div video>
+        <iframe
+            src="https://player.vimeo.com/video/748496458?h=25d7670a1d" width="640" height="360" frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
+        </video>
+      </div>
+      <div class="gmore">
+        <div>
+          <div class="prot">PROTAGONISTS</div>
+          <div class="group"><img class="gpic" src="pictures/img5.jpg"></div>
+        </div>
+        <div class="more">MORE</div>
+      </div>
+      <script src="main.js"></script>
 </body>
+
 </html>
