--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
   <div class="img-magnifier-container">
     <img id="timelineimg" src="pictures/img2.jpg" alt="Time line">
   </div>
+
+
+
+  
   <div class="flex-container">
     <div class="poster-box"><img class="poster" src="pictures/img3.jpg" alt="Poster"></div>
     <div class="aaa">
@@ -62,24 +66,25 @@
       </div>
 
 
-      <h3>Collective project work</h3>
-      <div class = "text2">
+ 
 
-        <p>A group of three people teamed up for this film in 2017.
-          The film was shot in Berlin in two sessions each with up to 6 participants.
-          The film was shot and edited and finalized collectively.
-          We approached a montage form that allows stay focused on the audible part
-          of the discussion. The viewer newer gets to see the speaking person, instead,
-          the camera perspective is focused on the other participants.
-        </p>
-      </div>
     </div>
 
-
- 
- 
-
   </div>
+
+  <div class = "flex-container2"></div>
+  <div class = "about">      <h3>Collective project work</h3> </about>
+  <div class = "text2">
+
+    <p>A group of three people teamed up for this film in 2017.
+      The film was shot in Berlin in two sessions each with up to 6 participants.
+      The film was shot and edited and finalized collectively.
+      We approached a montage form that allows stay focused on the audible part
+      of the discussion. The viewer newer gets to see the speaking person, instead,
+      the camera perspective is focused on the other participants.
+    </p>
+  </div>
+</div>
 
  
 
